fix: GitHub link visibility

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2497,10 +2497,6 @@ pre code.hljs {
     display: block;
   }
 
-  .sm\:flex {
-    display: flex;
-  }
-
   .sm\:flex-row {
     flex-direction: row;
   }
